--- a/appreact/docker-compose-dev.yml
+++ b/appreact/docker-compose-dev.yml
@@ -1,12 +1,15 @@
 version: "3"
 services:
   react-app:
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile.dev
     ports:
       - "3000:3000"
     volumes:
       - ./src:/app/src
-    env_file:
-      - /.env
+    environment:
+      - REACT_APP_NAME=DEV
+      - CHOKIDAR_USEPOLLING=true
+    #env_file:
+    #  - /.env
